--- a/index.html
+++ b/index.html
@@ -4,28 +4,27 @@
     <script src="libraries/p5.sound.min.js"></script>
     <script src="libraries/matter.js"></script>
     <script src="libraries/p5.play.js"></script>
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
    <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-database.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.3/firebase-database.js"></script>
 
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
-     <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyC4BUBzZyI9XgTnaOtXIDLGD7uIUMiElGc",
-        authDomain: "c39-fruitcatcher.firebaseapp.com",
-        databaseURL: "https://c39-fruitcatcher.firebaseio.com",
-        projectId: "c39-fruitcatcher",
-        storageBucket: "c39-fruitcatcher.appspot.com",
-        messagingSenderId: "686122669825",
-        appId: "1:686122669825:web:489d7ecfc2fcb4f9a66d00"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyBdc2UKQg81Jw8_3RgvRUW3qDXk4wOvy5c",
+    authDomain: "class-37-ceaa6.firebaseapp.com",
+    databaseURL: "https://class-37-ceaa6-default-rtdb.firebaseio.com",
+    projectId: "class-37-ceaa6",
+    storageBucket: "class-37-ceaa6.appspot.com",
+    messagingSenderId: "90686163923",
+    appId: "1:90686163923:web:6a5400d1247ba4dfba3d26"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <script src="js/player.js"></script>
     <script src="js/form.js"></script>
     <script src="js/game.js"></script>
